edited images and index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         <div class="one column row">
             <div class="column mobile hidden">
                 <div class="ui centered spaced extra-large  image" id="banner-image">
-                    <img src="https://static.wixstatic.com/media/0209e9_7e5f1dec920b444782f6926bb25b4f48~mv2.png/v1/crop/x_0,y_72,w_1919,h_685/fill/w_1919,h_673,al_c,q_85/0209e9_7e5f1dec920b444782f6926bb25b4f48~mv2.webp"
+                    <img src="images/girl.png"
                         alt="">
                 </div>
 
