--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         <div class="one column row">
             <div class="column mobile hidden">
                 <div class="ui centered spaced extra-large  image" id="banner-image">
-                    <img src="images/girl.png"
+                    <img src="https://static.wixstatic.com/media/0209e9_7e5f1dec920b444782f6926bb25b4f48~mv2.png/v1/crop/x_0,y_72,w_1919,h_685/fill/w_1919,h_673,al_c,q_85/0209e9_7e5f1dec920b444782f6926bb25b4f48~mv2.webp"
                         alt="">
                 </div>
 
@@ -13,7 +13,7 @@
         <div class="three column row">
             <div class="column">
                 <div class="ui centered spaced large image" id="banner-image">
-                    <img src="https://static.wixstatic.com/media/0209e9_7fae39275e6440f7a63422e13da51691~mv2_d_3857_2539_s_4_2.jpg/v1/crop/x_0,y_0,w_3857,h_2528/fill/w_606,h_454,al_c,q_80,usm_0.66_1.00_0.01/0209e9_7fae39275e6440f7a63422e13da51691~mv2_d_3857_2539_s_4_2.webp"
+                    <img src="images/girl.png"
                         alt="">
                     <a href="/approach"class="ui huge black button">
                         Approach
