edited images and index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
             </div>
             <div class="column">
                 <div class="ui centered spaced large image" id="banner-image">
-                    <img src="https://static.wixstatic.com/media/0209e9_633a1d131bf644d88da8ae366468d8c6~mv2_d_4000_2667_s_4_2.jpg/v1/fill/w_606,h_454,al_c,q_80,usm_0.66_1.00_0.01/0209e9_633a1d131bf644d88da8ae366468d8c6~mv2_d_4000_2667_s_4_2.webp"
+                    <img src="images/tech.png"
                         alt="">
                     <a href="/technology "class="ui huge black button">
                         Technology
@@ -31,7 +31,7 @@
             </div>
             <div class="column">
                 <div class="ui centered spaced large image" id="banner-image">
-                    <img src="https://static.wixstatic.com/media/0209e9_2c80cfb0296e43aeae9e1d67fb725a38~mv2_d_5616_3744_s_4_2.jpg/v1/fill/w_606,h_454,al_c,q_80,usm_0.66_1.00_0.01/0209e9_2c80cfb0296e43aeae9e1d67fb725a38~mv2_d_5616_3744_s_4_2.webp"
+                    <img src="images/testimonials.png"
                         alt="">
                     <a href="/testimonials" class="ui huge black button">
                         Testimonials
