--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -131,7 +131,8 @@ width: 100%;
 height: 100%;
 }
 #tech-content{
-    padding:60px
+    padding:10%;
+    padding-top: 0
 }
 .testimonial{
     border:2px black solid;
