changed contact page

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,10 +1,10 @@
 <% include ./partials/header.ejs %>
 <div class="container">
-    <h1 class="ui huge center aligned header">Let's Get Started!</h1>
-    <hr>
 
-<h1 class="ui center aligned header p-heading ">Interested in finding out more?  </h1>
-<h2 class="ui big center aligned header">Let's Talk!</h2> 
+
+<h1 class="ui center aligned header p-heading ">Interested?</h1>
+<hr>
+
 <div class="ui stackable grid">
     <div class="two column row">
         <div class="column mobile hidden">
