changed contact page

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,7 +6,7 @@
 <hr>
 
 <div class="ui stackable grid">
-    <div class="two column row">
+    <div class="two column row" id="contact-content">
         <div class="column mobile hidden">
             <img id= "contact-image" class="ui large image bordered"src="https://static.wixstatic.com/media/70ffe5bf0bb14e4b98128fac1f7beac7.jpg/v1/fill/w_596,h_1024,al_c,q_85/70ffe5bf0bb14e4b98128fac1f7beac7.webp" alt="">
         </div>
