--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,22 @@
 </div>
-<div class="ui vertical footer segment">
+<div class="ui vertical footer top attached segment center aligned">
+            <div id="social">
+                   <a href="https://www.facebook.com/finlaypianostudio/"><i class="facebook icon"></i></a>  |
+                   <a href="https://twitter.com/finlayma84"><i class="twitter icon"></i></a> |
+                   <a href="https://www.instagram.com/finlaypiano/"><i class="instagram icon"></i></a>  
+            </div>
+            <div id="footer-menu">
+                    <small><a href="/">Home</a>  | 
+                        <a href="/approach">Approach</a>  | 
+                        <a href="/technology">Technology</a>  | 
+                        <a href="/testimonials">Testimonials</a>  | 
+                        <a href="/contact">Contact</a>   
+                 </small>
+            </div>
+
+
         <div class="ui container" id="yourDiv">
+
            <small>&copy; 2019 Pianokeys Web Development</small> 
         </div>
     </div>
