--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,9 @@
 </div>
 <div class="ui vertical footer top attached segment center aligned">
             <div id="social">
-                   <a href="https://www.facebook.com/finlaypianostudio/"><i class="facebook icon"></i></a>  |
-                   <a href="https://twitter.com/finlayma84"><i class="twitter icon"></i></a> |
-                   <a href="https://www.instagram.com/finlaypiano/"><i class="instagram icon"></i></a>  
+                   <a href="https://www.facebook.com/finlaypianostudio/"><i class="facebook icon blue"></i></a>  |
+                   <a href="https://twitter.com/finlayma84"><i class="twitter icon teal"></i></a> |
+                   <a href="https://www.instagram.com/finlaypiano/"><i class="instagram icon yellow"></i></a>  
             </div>
             <div id="footer-menu">
                     <small><a href="/">Home</a>  | 
