--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
             <div id="social">
                    <a href="https://www.facebook.com/finlaypianostudio/"><i class="facebook icon blue"></i></a>  |
                    <a href="https://twitter.com/finlayma84"><i class="twitter icon teal"></i></a> |
-                   <a href="https://www.instagram.com/finlaypiano/"><i class="instagram icon yellow"></i></a>  
+                   <a href="https://www.instagram.com/finlaypiano/"><i class="instagram icon red"></i></a>  
             </div>
             <div id="footer-menu">
                     <small><a href="/">Home</a>  | 
