Removed segment class on testimonial page

--- a/views/testimonials.ejs
+++ b/views/testimonials.ejs
@@ -5,7 +5,7 @@
 Testimonials</h1>
 <hr>
 <br>
-<div class="ui top attached segment">
+<div>
 <div class="ui stackable grid">
         <div class="three column row">
             <div class="column">            
