--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -161,7 +161,8 @@ height: 100%;
 
 }
 #contact-image{
-    height: 600px;
+    margin-top: 40px;
+    height: 500px;
     width: 500px;
     border: 2px black solid !important;
 }
