--- a/views/technology.ejs
+++ b/views/technology.ejs
@@ -15,9 +15,7 @@
 
             <div class="column">
                 <p>
-                    I was never an "early adopter," and never thought that one of the most important teaching
-                    tools in my studio would EVER be an iPad. But now that I have discovered its potential I'll
-                    never go back! Many of my lessons include time on and off the piano bench, and I use a
+                    Many of my lessons include time on and off the piano bench, and I use a
                     variety of apps and games to reinforce what we do at the piano. It's not a replacement for
                     traditional methods or time spent at the instrument, of course, but used correctly, they can
                     really make learning new skills a lot easier AND more fun! The following is just a taste of
@@ -29,32 +27,10 @@
         </div>
  
 
-        <div class="two column row">
-                <div class="column">
-                        <h2>Rhythm</h2>
-                        <p>
-                            Having a steady pulse and being able to read rhythms fluently is essential for success as a
-                            piano student, but traditional teaching methods can be dull and confusing! Being asked to count
-                            out loud as a metronome beeps menacingly at you is not my idea of fun. Moreover, far too many
-                            students are asked to do so before they're ready! The iPad can help. Here is a prime example of
-                            a fun game with the ulterior motive of developing a steady pulse!
-                        </p>
-                    </div>
-            <div class="column">
-                <div class="video-container">
-                        <iframe width="330" height="220" src="https://www.youtube.com/embed/pVFlfqIc4LM" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-                
-            </div>
-
-
-        </div>
 
         <div class="two column row">
                 <div class="column">
-                        <h2>Sightreading</h2>
+                        <h2>Note Reading</h2>
                         <p>
                             Learning to read music fluently gives students the independence to learn music on their own and
                             to progress at a much faster rate, but who likes filling in notespellers and drilling
@@ -71,6 +47,28 @@
                 
             </div>
 
+
+
+        </div>
+
+
+        <div class="two column row">
+                <div class="column">
+                        <h2>Rhythm</h2>
+                        <p>
+                            Having a steady pulse and being able to read rhythms fluently is essential for success as a
+                            piano student, but traditional teaching methods can be dull and confusing! Being asked to count
+                            out loud as a metronome beeps menacingly at you is not my idea of fun. Moreover, far too many
+                            students are asked to do so before they're ready! The iPad can help. Here is a prime example of
+                            a fun game with the ulterior motive of developing a steady pulse!
+                        </p>
+                    </div>
+            <div class="column">
+                <div class="video-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/JrplPwzybps" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                
+            </div>
 
 
         </div>
@@ -94,28 +92,6 @@
 
         </div>
 
-        <div class="two column row">
-                <div class="column">
-                        <h2>Classical Music Appreciation</h2>
-                        <p>
-                            Although I don't limit myself to classical music instruction, it is the core part of my
-                            curriculum, particularly for intermediate and advanced students. Strong classical training will
-                            benefit all piano students regardless of what musical styles they wish to play. However,
-                            learning about "old dead guys" doesn't need to be a chore! This is something I've used to
-                            introduce young students to famous classical composers and their music.
-                        </p>
-                    </div>
-            <div class="column">
-                <div class="video-container">
-                     <iframe width="330" height="220" src="https://www.youtube.com/embed/2w5n222mJYI" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-                </div>
-               
-            </div>
-
-
-        </div>
     </div>
 </div>
 
