--- a/views/technology.ejs
+++ b/views/technology.ejs
@@ -17,7 +17,7 @@
                 <p>
                     Many of my lessons include time on and off the piano bench, and I use a
                     variety of apps and games to reinforce what we do at the piano. It's not a replacement for
-                    traditional methods or time spent at the instrument, of course, but used correctly, they can
+                    time spent at the instrument, of course, but used correctly, they can
                     really make learning new skills a lot easier AND more fun! The following is just a taste of
                     the dozens of apps I use to enhance my lessons.
                     <hr>
