--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,9 +10,9 @@
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous">
         </script>
 
-        <script src="stylesheets/hamburger.js" ></script>
-    <script src="semantic/dist/semantic.min.js"></script>
-    <script type='text/javascript' charset='utf-8'>
+        <script src="/stylesheets/hamburger.js" ></script>
+        <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>    
+        <script type='text/javascript' charset='utf-8'>
         window.liveSiteAsyncInit = function() {
           LiveSite.init({
             id : 'WI-CPQWTG30TSRS3Z8X9SWX',
@@ -46,6 +46,7 @@
             title.innerHTML +=  " Homepage"
         }
 </script>
+
 <link rel = "icon" href =  
 "images/piano.png" 
         type = "image/x-icon"> 
