commented out auth for now, not ready for production

--- a/views/testimonials/testimonials.ejs
+++ b/views/testimonials/testimonials.ejs
@@ -9,7 +9,7 @@
 <hr>
 <br>
 <div>
-  <h2 class="ui large center aligned header">Click to view, edit, or delete testimonial</h2>
+  <!-- <h2 class="ui large center aligned header">Click to view, edit, or delete testimonial</h2> -->
   <div class="ui three column stackable grid">
     <%testimonials.forEach((testimonial, index)=>{%>
     <div class="column">
