--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -77,11 +77,11 @@
                         <!-- <% if (!currentUser){%> 
     
                      <a class="item" href="/register">
-                       Login/Sign Up -->
+                       Login/Sign Up 
                     </a>
                     <%}else{%>
                     Welcome, <%=currentUser.firstname %>!
-                    <%}%> --!>
+                    <%}%> -->
                     <div class="ui secondary menu right">
                         <a href="https://live.vcita.com/site/en27y7hjp0zhboyr/online-scheduling?staff=ngxwhe1u43agj3x8" target="blank" class="ui large black button livesite-schedule" id="schedule-button" data-staff="ngxwhe1u43agj3x8">
                                 Request Free Lesson
