finish auth, begin adding in error handling (login success message not working, register success/failure message not working.

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,8 @@
             <input type="text" name="username" placeholder="username" required>
         </div>
         <div class="field ten wide">
-            <label for="passwordpassword">password</label>
+            
+            <label for="password">password</label>
             <input type="password" name="password" placeholder="password" required>
         </div>
         <div class="field ten wide ">
@@ -22,9 +23,10 @@
         <div class="field ten wide"><label for="email">email</label>
             <input type="email" name="email" placeholder="Email address" required>
         </div>
-        <button class="ui large blue button "type="submit">Sign Up</button>
+        <button class="ui large blue button "type="submit">Sign Up</button>    
+        Already registered? <a href="/login">Log in</a> 
+
     </form>
-    <p>Already registered? <a href="/login">Log in</a> </p>
 
 </div> 
 
