--- a/views/testimonials/edit.ejs
+++ b/views/testimonials/edit.ejs
@@ -16,6 +16,7 @@
               <option value="Student Parent">Student Parent</option>
               <option value="Colleague">Colleague</option>
               <option value="Friend">Friend</option>
+              <option value="Friend">Other</option>
               </select>
         </div>
         <div class="field">
