--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,21 @@
 <% include ./partials/header %>
+<h1 class="ui huge header center aligned">Login</h1>
+<div id="authcontainer" class="container">
 
-<h1>login</h1>
+<form action="/login" method="post" class="ui form">
+    <input type="hidden" name="referer" value= <%= referer %> >
 
-<form action="/login" method="post">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button type="submit" class="btn btn-primary">Log In</button>
+    <div class="field ten wide" >
+        <label for="username">username: </label>
+        <input type="text" name="username" placeholder="username" required>
+    </div>
+    <div class="field ten wide">
+
+        <label for="password">password</label>
+        <input type="password" name="password" placeholder="password" required>
+    </div>
+    <button type="submit"class="ui large blue button">Log In</button>
+    Not registered?  <a href="/register">Sign Up</a>
 </form>
+</div>
 <% include ./partials/footer %>
