--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -73,15 +73,23 @@
                     <a class="item" href="/contact">
                         Contact
                     </a>
-                    <ul class="nav navbar-nav navbar-right">
-                        <!-- <% if (!currentUser){%> 
+                         <% if (!currentUser){%> 
     
-                     <a class="item" href="/register">
-                       Login/Sign Up 
+                     <a class="item" href="/login">
+                       Login/Sign Up
                     </a>
                     <%}else{%>
-                    Welcome, <%=currentUser.firstname %>!
-                    <%}%> -->
+                    <a class="item" href="">
+                        <%if(currentUser.firstname){%>
+                            Welcome, <%=currentUser.firstname%>! </a>
+                            <%}else{%>
+                            Welcome, <%=currentUser.username%>! </a>
+
+                            <%}%>
+                
+                    <a class= "item" href="/logout"> Logout</a>
+
+                    <%}%> 
                     <div class="ui secondary menu right">
                         <a href="https://live.vcita.com/site/en27y7hjp0zhboyr/online-scheduling?staff=ngxwhe1u43agj3x8" target="blank" class="ui large black button livesite-schedule" id="schedule-button" data-staff="ngxwhe1u43agj3x8">
                                 Request Free Lesson
@@ -99,3 +107,11 @@
     </div>
   
 <div class="main-content">
+         <% if(error&& error.length > 0){%>
+    <div class="ui negative message" id="error"><%= error %></div>
+    <%}%>
+
+        <% if(success&& success.length > 0){%>
+    <div class="ui positive message" id="success"><%= success %></div>
+    <%}%>
+
