--- a/views/testimonials/new.ejs
+++ b/views/testimonials/new.ejs
@@ -14,6 +14,7 @@
           <option value="Student">Student</option>
           <option value="Student Parent">Student Parent</option>
           <option value="Colleague">Colleague</option>
+          <option value="Colleague">Friend</option>
           <option value="Other">Other</option>
           </select>
         </div>
