--- a/views/testimonials/testimonials.ejs
+++ b/views/testimonials/testimonials.ejs
@@ -1,25 +1,28 @@
 <% include ../partials/header.ejs %>
-<br>
 <h1 class="ui huge center aligned header"><i class="comments outline icon"></i>
   Testimonials</h1>
-  <% if (currentUser){%>
-
+<%if (currentUser){ %>
 <h1 class="ui huge center aligned header"><a class="ui large black basic  button" href="/testimonials/new">Add new
     testimonial</a></h1>
-    <%}else{%>
-<a href="/login"><h4 class="ui medium center aligned header">Log in or Sign up to add a testimonial!</h4></a> 
-      <%}%>
-<Br>
+   <% }else{%>
+    <h2 class="ui huge center aligned header"><a  href="/login">Login</a> or <a href="/register">Sign Up</a> to Add Testimonial</h2>
+    <%}%>
+    <br>
 <hr>
 <br>
 <div>
-  <!-- <h2 class="ui large center aligned header">Click to view, edit, or delete testimonial</h2> -->
+    <%if (currentUser){ %>
+
+  <h2 class="ui large center aligned header">Click to view, edit, or delete testimonial</h2>
+  <% }%>
+
   <div class="ui three column stackable grid">
     <%testimonials.forEach((testimonial, index)=>{%>
     <div class="column">
-    <% if (currentUser){%>
+        <%if (currentUser){ %>
+
       <a href="/testimonials/<%=testimonial._id%>">
-    <%}%>
+          <%}%>
         <div class="ui  cards">
           <div class="card card-height">
             <div class="image">
@@ -41,10 +44,7 @@
             </div>
           </div>
         </div>
-        <% if (currentUser){%>
-
       </a>
-      <%}%>
       </form>
     </div>
     <%})%>
