restyle logout button

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -91,7 +91,7 @@
                             Welcome, <%=currentUser.username%>! </a>
 
                             <%}%>
-                    <a id="login" class= "right item" href="/logout"> Logout</a>
+                    <a class= "right item" href="/logout"> <button class="ui button red">Logout</button> </a>
 
                     <%}%> 
 
