--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -93,10 +93,10 @@
                         <%if(currentUser.firstname){%>
                             Welcome, <%=currentUser.firstname%>! </a>
                             <%}else{%>
-                            Welcome, <%=currentUser.username%>! </a>
-                            <a href="/logout"><button class="ui red button">Logout</button> </a>
+                            Welcome, <%=currentUser.username%>! 
 
                             <%}%>
+                            <a class="item"href="/logout"><button class="ui red button">Logout</button> </a>
 
                     <%}%> 
 
