--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,118 +10,127 @@
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous">
         </script>
 
-        <script src="/stylesheets/hamburger.js" ></script>
-        <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>    
-        <script type='text/javascript' charset='utf-8'>
-        window.liveSiteAsyncInit = function() {
-          LiveSite.init({
-            id : 'WI-CPQWTG30TSRS3Z8X9SWX',
-            ui : false
-          });
+    <script src="/stylesheets/hamburger.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    <script type='text/javascript' charset='utf-8'>
+        window.liveSiteAsyncInit = function () {
+            LiveSite.init({
+                id: 'WI-CPQWTG30TSRS3Z8X9SWX',
+                ui: false
+            });
         };
-        (function(d, s, id){
-          var js, fjs = d.getElementsByTagName(s)[0],
-              p = 'https://',
-              r = Math.floor(new Date().getTime() / 1000000);
-          if (d.getElementById(id)) {return;}
-          js = d.createElement(s); js.id = id;
-          js.src = p + "widgets.vcdnita.com/assets/livesite.js?" + r;
-          fjs.parentNode.insertBefore(js, fjs);
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0],
+                p = 'https://',
+                r = Math.floor(new Date().getTime() / 1000000);
+            if (d.getElementById(id)) { return; }
+            js = d.createElement(s); js.id = id;
+            js.src = p + "widgets.vcdnita.com/assets/livesite.js?" + r;
+            fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'livesite-jssdk'));
-      </script>
+    </script>
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Finlay Piano Studio: </title>
 <script>
-        function jsUcfirst(string) {
-            return string.charAt(0).toUpperCase() + string.slice(1);
-        }
-        var page = location.pathname.substring(1);
-        var title=document.querySelector("title")
-        if(page){
-            title.innerHTML += jsUcfirst(page);
-        } else  {
-            title.innerHTML +=  " Homepage"
-        }
+    function jsUcfirst(string) {
+        return string.charAt(0).toUpperCase() + string.slice(1);
+    }
+    var page = location.pathname.substring(1);
+    var title = document.querySelector("title")
+    if (page) {
+        title.innerHTML += jsUcfirst(page);
+    } else {
+        title.innerHTML += " Homepage"
+    }
 </script>
 
-<link rel = "icon" href =  
-"images/piano.png" 
-        type = "image/x-icon"> 
+<link rel="icon" href="images/piano.png" type="image/x-icon">
+
 <body class="site">
-<div class="container">
-    <div class="navbar-container">
+    <div class="container">
+        <div class="navbar-container">
             <div class="ui secondary menu stackable">
-                    <a href="/">
-                        <img id="logo" src="/images/logo.png" alt="couldn't find image">
-            
-                    </a>
+                <a href="/">
+                    <img id="logo" src="/images/logo.png" alt="couldn't find image">
 
-                    <a class="item" href="/">
-                        Home
-                    </a>
-                    <a class="item mobile tablet hidden" href="/approach">
-                        Approach
-                    </a>
-                    <a class="item  mobile tablet hidden" href="/technology">
-                        Technology
-                    </a>
-                    <a class="item mobile tablet " href="/testimonials">
-                        Testimonials
-                    </a>
-                    <a class="item" href="/contact">
-                        Contact
-                    </a>
-                         <% if (!currentUser){%> 
+                </a>
+
+                <a class="item" href="/">
+                    Home
+                </a>
+                <a class="item mobile tablet hidden" href="/approach">
+                    Approach
+                </a>
+                <a class="item  mobile tablet hidden" href="/technology">
+                    Technology
+                </a>
+                <a class="item mobile tablet " href="/testimonials">
+                    Testimonials
+                </a>
+                <a class="item" href="/contact">
+                    Contact
+                </a>
+                <% if (!currentUser){%>
                 <div class="ui secondary menu right">
-                        <a class="item mobile hidden" href="/login">
-                            <button id="login" class="ui button mobile hidden">Login</button> 
-                        </a>
-                            <a href="/login" class="item mobile only">Login</a> 
-                         
-                        <a class="item mobile hidden" href="/register">
-                            <button id="register" class="ui button mobile hidden">register</button> 
-                        </a>
-                            <a href="/register" class="item mobile only">Register</a> 
-                       
+                    <a class="item mobile hidden" href="/login">
+                        <button id="login" class="ui button mobile hidden">Login</button>
+                    </a>
+                    <a href="/login" class="item mobile only">Login</a>
+
+                    <a class="item mobile hidden" href="/register">
+                        <button id="register" class="ui button mobile hidden">register</button>
+                    </a>
+                    <a href="/register" class="item mobile only">Register</a>
+
 
                 </div>
-                    <%}else{%>
-                    <a class="right item" href="">
-                        <%if(currentUser.firstname){%>
-                            Welcome, <%=currentUser.firstname%>! </a>
-                            <%}else{%>
-                            Welcome, <%=currentUser.username%>! 
+                <%}else{%>
+                <%if(currentUser.firstname){%>
 
-                            <%}%>
-                            <a class="item"href="/logout"><button class="ui red button">Logout</button> </a>
+                <a class="right item" href="">
+                    Welcome, <%=currentUser.firstname%>! 
+                </a>
+                <a href="/logout"><button class="ui red button">Logout</button> </a>
 
-                    <%}%> 
+                <%}else{%>
+                <a class="right item" href="">
+                    Welcome, <%=currentUser.username%>
+                    <a href="/logout"><button class="ui red button">Logout</button> </a>
+
+                </a>
+
+
+                <%}%>
+
+                    <%}%>
 
 
 
-                    <div class="hamburger">
-                            <span class="hamburger-bun"></span>
-                            <span class="hamburger-patty"></span>
-                            <span class="hamburger-bun"></span>
-                    </div>
-            
+                <div class="hamburger">
+                    <span class="hamburger-bun"></span>
+                    <span class="hamburger-patty"></span>
+                    <span class="hamburger-bun"></span>
                 </div>
+
             </div>
+        </div>
     </div>
-  
-<div class="main-content">
-    <div class="mobile hidden" id="schedule-div">
-        <a href="https://live.vcita.com/site/en27y7hjp0zhboyr/online-scheduling?staff=ngxwhe1u43agj3x8" target="blank" class="ui large black button livesite-schedule" id="schedule-button" data-staff="ngxwhe1u43agj3x8">
-            Request Free Lesson
-</a>
-</div>
-         <% if(error&& error.length > 0){%>
-    <div class="ui negative message" id="error"><%= error %></div>
-    <%}%>
+
+    <div class="main-content">
+        <div class="mobile hidden" id="schedule-div">
+            <a href="https://live.vcita.com/site/en27y7hjp0zhboyr/online-scheduling?staff=ngxwhe1u43agj3x8"
+                target="blank" class="ui large black button livesite-schedule" id="schedule-button"
+                data-staff="ngxwhe1u43agj3x8">
+                Request Free Lesson
+            </a>
+        </div>
+        <% if(error&& error.length > 0){%>
+        <div class="ui negative message" id="error"><%= error %></div>
+        <%}%>
 
         <% if(success&& success.length > 0){%>
-    <div class="ui positive message" id="success"><%= success %></div>
-    <%}%>
+        <div class="ui positive message" id="success"><%= success %></div>
+        <%}%>
