--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -120,7 +120,7 @@
     </div>
 
     <div class="main-content">
-        <div class="mobile hidden" id="schedule-div">
+        <div  id="schedule-div">
             <a href="https://live.vcita.com/site/en27y7hjp0zhboyr/online-scheduling?staff=ngxwhe1u43agj3x8"
                 target="blank" class="ui large black button livesite-schedule" id="schedule-button"
                 data-staff="ngxwhe1u43agj3x8">
