--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -81,9 +81,9 @@
                     <a href="/login" class="item mobile only">Login</a>
 
                     <a class="item mobile hidden" href="/register">
-                        <button id="register" class="ui button mobile hidden">register</button>
+                        <button id="register" class="ui button mobile hidden">Sign Up</button>
                     </a>
-                    <a href="/register" class="item mobile only">Register</a>
+                    <a href="/register" class="item mobile only">Sign Up</a>
 
 
                 </div>
@@ -120,6 +120,8 @@
     </div>
 
     <div class="main-content">
+            <% if (!currentUser){%>
+
         <div  id="schedule-div">
             <a href="https://live.vcita.com/site/en27y7hjp0zhboyr/online-scheduling?staff=ngxwhe1u43agj3x8"
                 target="blank" class="ui large black button livesite-schedule" id="schedule-button"
@@ -127,6 +129,7 @@
                 Request Free Lesson
             </a>
         </div>
+        <%}%>
         <% if(error&& error.length > 0){%>
         <div class="ui negative message" id="error"><%= error %></div>
         <%}%>
